--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
         'doll', 'toy', 'vessel', 'jug', 'pot', 'basket', 'rug', 'carpet', 'tapestry',
         'glass', 'stone', 'metal', 'wood', 'cloth', 'paper', 'leather', 'gold',
         'silver', 'bronze', 'iron', 'porcelain', 'jade', 'ivory', 'pearl', 'crystal',
-        'ruby', 'emerald', 'diamond', 'amethyst', 'fragment', 'piece', 'artifact', 'relic'
+        'ruby', 'emerald', 'diamond', 'amethyst', 'fragment', 'piece', 'artifact', 'relic', 'foreign costume and textiles','flower','manual','letter','notebook','phrasebook','relief','coat','color aquatint','spoon','poster','cross','jug','sketch-book','watercolour','card','presses','dress','vessel','stopper','doll','bottle','jacket','charger','stopper','bell','robe','protective charm','lace','wedding veil'
       ];
       
       // Simple approach: find the first common noun in the description
